<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/conteiner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hi"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/femin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/femin"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/black"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/conteiner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/conteiner1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/conteiner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/mass"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@color/colorAccent"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/age"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@color/colorAccent"/>

            <EditText
                android:id="@+id/kreatinine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/kreatinine"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@color/colorAccent"/>

            <EditText
                android:id="@+id/cistatine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:hint="@string/cistatine"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conteiner3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/relise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/relise" />

            <Button
                android:id="@+id/Clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:onClick="Cliar"
                android:text="@string/clean" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/conteiner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/conteiner5"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text=" " />

        <WebView
            android:id="@+id/recomend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            tools:ignore="WebViewLayout" />
    </LinearLayout>


</RelativeLayout>